@@ -26,6 +26,12 @@
 2049497266399, 3875196415920480829978279850511752676499384722019721458357455
 29259111353576, 524613164482816169908873750526849574668376660999341089640759
 880949016596504]~]
+[[[[[[1, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0
+, 1], [0]], [1, []], [matrix(0,2), matrix(0,2)], [[], [[], Vecsmall([])]], [
+]], []]], [[[[[2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0
+, 0, 0, 0, 1], [0]], [1, []], [Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60
+, -10, -60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0,
+ -10, 0]], 1]), matrix(0,2)], [[], [[], Vecsmall([])]], []], [[]]]]]
 [[[[[1, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0,
  1], Vecsmall([1])], [2, [2]], [matrix(0,2), matrix(0,2)], [[], [[2], Vecsma
 ll([1]), Mat(1), 20.85619222793697806338436677312547069840936189148609965738
@@ -93,4 +99,4 @@ Mat([0, 0, 0, -2, 0]), 2]]], [[0]~, Mat(1)]]], [[2], Vecsmall([1]), Mat(1/2)
   *** bnfisprincipal: Warning: precision too low for generators, not given.
 18
 [120, 4, 4, 2]
-Total time spent: 28473
+Total time spent: 29138
